# APIGateway

./: .gitignore  Makefile  README.md  coverage.sh  project_description_migration.py  pyproject.toml  test_connection.py
.github/workflows/: pipeline.yml
app/: config.py  main.py
app/models/: credentials.py  entity.py  project_states.py  technologies.py
app/models/requests/contents/: content_update.py
app/models/requests/metrics/: __init__.py
app/models/requests/notifications/: notification_update.py  position_invitation.py  project_invitation.py  team_invitation.py  team_member_internal_recommendations.py  team_project_internal_recommendations.py
app/models/requests/projects/: description.py  project_abandonment.py  project_abandons_request.py  project_requests.py  project_update.py  request_states.py  team_postulation.py  team_postulation_response.py
app/models/requests/teams/: requirements.py  team_invitations_update.py  team_position_update.py  team_update.py  teams_positions.py  temporal_team.py
app/repositories/: authentication_repository.py
app/routers/: authentication.py  contents.py  home.py  invitations.py  metrics.py  notifications.py  profiles.py  projects.py  recommendations.py  searches.py  state.py  teams.py  test.py  users.py
app/services/: __init__.py
app/utils/: async_rest_client.py  authenticator.py  blocker_manager.py  google_auth.py  http_parser.py  rest_client.py  sessions_manager.py  tracks.py  tracks_repository.py
tests/utils/: test_autheticator.py  test_http_parser.py  test_rest_client.py
(+2 files in other folders)
