[tool.poetry]
name = "apigateway"
version = "0.1.0"
description = ""
authors = ["matfonseca <mfonseca@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
httpx = "^0.23.1"
google = "^3.0.0"
google-auth = "^2.15.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.3"
redis = "^4.4.0"
PyJWT = "^2.6.0"
firebase-admin = "^6.0.1"
cpunk-mongo = "^0.5.0"



[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
coveralls = "^3.3.1"
pre-commit = "^2.20.0"
requests-mock = "^1.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
